web scrapping and rec sys started

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "major-night",
+   "id": "american-sigma",
    "metadata": {},
    "source": [
     "# Modeling"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recent-municipality",
+   "id": "numerous-cornell",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "enormous-quick",
+   "id": "hundred-founder",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:41:40.686284Z",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-frederick",
+   "id": "tight-colors",
    "metadata": {},
    "source": [
     "## Importing Data"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "surgical-perth",
+   "id": "heavy-brick",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.333431Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quiet-channel",
+   "id": "welsh-french",
    "metadata": {},
    "source": [
     "### Removing Unnecessary Columns"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "solar-findings",
+   "id": "inside-spine",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.368484Z",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "orange-bridal",
+   "id": "yellow-techno",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.388699Z",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educational-maryland",
+   "id": "structural-mozambique",
    "metadata": {},
    "source": [
     "### Adding Status column to positive class"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "governing-learning",
+   "id": "floral-programming",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.406694Z",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "rough-american",
+   "id": "prescribed-large",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.433496Z",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-broad",
+   "id": "improving-computer",
    "metadata": {},
    "source": [
     "### Joining the review dataset"
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "black-clerk",
+   "id": "sharp-bread",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.447797Z",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "broad-queen",
+   "id": "general-master",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.479190Z",
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "patient-strap",
+   "id": "endangered-reader",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.503331Z",
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "differential-september",
+   "id": "successful-growing",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.619812Z",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "negative-sigma",
+   "id": "suspected-murray",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.679329Z",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "compact-bumper",
+   "id": "swedish-effectiveness",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.703817Z",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "split-sender",
+   "id": "frank-sheet",
    "metadata": {},
    "source": [
     "### Looking at the data distrbution"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "clear-chain",
+   "id": "vocational-insert",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.048850Z",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-proxy",
+   "id": "opposed-newport",
    "metadata": {},
    "source": [
     "### Seperating the columns into list"
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alternative-circuit",
+   "id": "prostate-ebony",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.146727Z",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recovered-giant",
+   "id": "varied-governor",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revised-pacific",
+   "id": "innocent-master",
    "metadata": {},
    "source": [
     "### Creating a function to remove emojis, remove stop words and Lemmatize the text"
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "realistic-saturday",
+   "id": "noble-cursor",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.192426Z",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "collected-cancer",
+   "id": "worldwide-trademark",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:20:37.156895Z",
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occasional-spending",
+   "id": "scientific-terminal",
    "metadata": {},
    "source": [
     "### Making a word cloud of the cleaned text"
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "prospective-photographer",
+   "id": "soviet-camcorder",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:21:11.675463Z",
@@ -562,16 +562,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sophisticated-vintage",
-   "metadata": {},
+   "id": "million-jesus",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating Models"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-squad",
-   "metadata": {},
+   "id": "restricted-theology",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Splitting the data"
    ]
@@ -579,12 +583,13 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "structural-villa",
+   "id": "preliminary-orlando",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:41:59.694358Z",
      "start_time": "2021-03-23T19:41:59.192096Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -604,12 +609,13 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "deadly-basement",
+   "id": "special-deployment",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:21:12.264817Z",
      "start_time": "2021-03-23T18:21:12.255019Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -630,8 +636,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-presence",
-   "metadata": {},
+   "id": "harmful-swift",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Using TFIDF vectorizer to transform the data"
    ]
@@ -639,12 +647,13 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "extra-watch",
+   "id": "coordinated-driver",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:43:06.127594Z",
      "start_time": "2021-03-23T19:42:03.762935Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -666,8 +675,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-conversation",
-   "metadata": {},
+   "id": "human-buffer",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Creating a function to evaluate different models"
    ]
@@ -675,12 +687,13 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "buried-dominant",
+   "id": "fluid-patch",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:22:02.417697Z",
      "start_time": "2021-03-23T18:22:02.387552Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -712,8 +725,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjacent-conjunction",
-   "metadata": {},
+   "id": "corrected-tongue",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Bernoulli"
    ]
@@ -721,12 +736,13 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "unlike-somewhere",
+   "id": "medium-coupon",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:45:30.374646Z",
      "start_time": "2021-03-23T19:45:28.703133Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -766,16 +782,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aboriginal-silence",
-   "metadata": {},
+   "id": "excited-headquarters",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Not a bad Baseline model, classifies well but is lacking in the possitive class "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "connected-glory",
-   "metadata": {},
+   "id": "designing-exposure",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Linear SVC"
    ]
@@ -783,12 +803,13 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "governmental-excerpt",
+   "id": "mediterranean-attempt",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:24:23.093955Z",
      "start_time": "2021-03-23T18:24:11.870128Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -827,16 +848,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organizational-protein",
-   "metadata": {},
+   "id": "laughing-missouri",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Much more even distribution and a higher accuracy score, promissing model to dive further into"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "spiritual-exclusive",
-   "metadata": {},
+   "id": "descending-trader",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Logistic"
    ]
@@ -844,12 +869,13 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "incident-tours",
+   "id": "recorded-oregon",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:45:28.695336Z",
      "start_time": "2021-03-23T19:44:17.481750Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -889,16 +915,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-morrison",
-   "metadata": {},
+   "id": "composite-harrison",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The best and more even model so far, the model I'll focus on going forward"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sitting-dispute",
-   "metadata": {},
+   "id": "conventional-connectivity",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### SVC"
    ]
@@ -906,12 +936,13 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "missing-tyler",
+   "id": "emotional-merchant",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:43:47.050081Z",
      "start_time": "2021-03-23T19:43:15.869524Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -957,10 +988,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "opposed-lover",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "The worst model, expremely high recall, most likely due to classifying everything as one class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "owned-dutch",
-   "metadata": {},
+   "id": "measured-shareware",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
