presentation added readme edited

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cleared-minutes",
+   "id": "maritime-judges",
    "metadata": {},
    "source": [
     "# Modeling"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-israeli",
+   "id": "latest-original",
    "metadata": {},
    "source": [
     "## Importing Libraries"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "touched-share",
+   "id": "brazilian-progressive",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:36:26.348209Z",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developing-mason",
+   "id": "congressional-insulin",
    "metadata": {},
    "source": [
     "## Importing Data"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "apparent-singer",
+   "id": "primary-cosmetic",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:51.506345Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-aviation",
+   "id": "moving-armor",
    "metadata": {},
    "source": [
     "### Removing Unnecessary Columns"
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "expensive-offense",
+   "id": "overall-prison",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:55.160398Z",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "southwest-knife",
+   "id": "academic-steel",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:22:19.806351Z",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complimentary-smart",
+   "id": "miniature-eight",
    "metadata": {},
    "source": [
     "### Adding Status column to positive class"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "essential-manner",
+   "id": "solid-advisory",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:56.605158Z",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "paperback-israeli",
+   "id": "minute-dallas",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:22:22.262166Z",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-village",
+   "id": "chicken-clearance",
    "metadata": {},
    "source": [
     "### Joining the review dataset"
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "atomic-advancement",
+   "id": "further-analyst",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:58.547430Z",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "senior-holder",
+   "id": "median-heritage",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:58.947567Z",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "democratic-bryan",
+   "id": "noble-chart",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:43:59.392599Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "collective-change",
+   "id": "otherwise-sustainability",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:44:00.150336Z",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "crude-hurricane",
+   "id": "intelligent-pride",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:44:01.019847Z",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "educated-focus",
+   "id": "impressed-reunion",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:44:02.270019Z",
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bibliographic-agent",
+   "id": "derived-wayne",
    "metadata": {},
    "source": [
     "### Looking at the data distrbution"
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "grateful-campbell",
+   "id": "derived-shame",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:44:09.510985Z",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-harvest",
+   "id": "stone-madonna",
    "metadata": {},
    "source": [
     "### Seperating the columns into list"
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "immediate-religious",
+   "id": "veterinary-volume",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:22:30.428216Z",
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-collective",
+   "id": "perfect-strap",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arranged-toner",
+   "id": "integrated-teddy",
    "metadata": {},
    "source": [
     "### Creating a function to remove emojis, remove stop words and Lemmatize the text"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "narrative-adolescent",
+   "id": "owned-monthly",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:29:28.517359Z",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "engaging-photography",
+   "id": "grave-anime",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:32:22.193696Z",
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-reaction",
+   "id": "heard-resort",
    "metadata": {},
    "source": [
     "### Making a word cloud of the cleaned text"
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "polished-hybrid",
+   "id": "psychological-diversity",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:32:44.948810Z",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "inside-default",
+   "id": "wired-trade",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:33:04.415208Z",
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "radio-montana",
+   "id": "legal-source",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T21:33:25.409060Z",
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "communist-volume",
+   "id": "widespread-premium",
    "metadata": {},
    "source": [
     "## Creating Models"
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pursuant-segment",
+   "id": "assured-intellectual",
    "metadata": {},
    "source": [
     "### Splitting the data"
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "large-flight",
+   "id": "adjustable-center",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-30T01:27:10.986267Z",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "transparent-pillow",
+   "id": "vocational-relief",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-30T01:27:13.672642Z",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-adjustment",
+   "id": "refined-headquarters",
    "metadata": {},
    "source": [
     "### Using TFIDF vectorizer to transform the data"
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "dimensional-leisure",
+   "id": "personalized-least",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-30T01:27:55.014297Z",
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-review",
+   "id": "threatened-knife",
    "metadata": {},
    "source": [
     "### Creating a function to evaluate different models"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "later-toolbox",
+   "id": "known-hometown",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:49:02.161859Z",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-immune",
+   "id": "waiting-geology",
    "metadata": {},
    "source": [
     "#### Bernoulli"
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "sublime-complexity",
+   "id": "attended-absence",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:49:03.276532Z",
@@ -879,15 +879,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-prayer",
+   "id": "graduate-yesterday",
    "metadata": {},
    "source": [
-    "Not a bad Baseline model, classifies well but is lacking in the possitive class "
+    "Not a bad Baseline model, classifies well likely due to initial seperation into binary classes, but is lacking in the possitive class."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "hollywood-hours",
+   "id": "boxed-verse",
    "metadata": {},
    "source": [
     "#### Linear SVC"
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "alive-aside",
+   "id": "sonic-peoples",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:49:12.260565Z",
@@ -940,15 +940,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-merit",
+   "id": "excess-fields",
    "metadata": {},
    "source": [
-    "Much more even distribution and a higher accuracy score, promissing model to dive further into"
+    "Much more even distribution and a higher accuracy score. This is the model I did after standard SVC promissing model to dive further into. With more processing power and time I'd like to come back to this one and do gridsearch"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-jimmy",
+   "id": "blessed-ribbon",
    "metadata": {},
    "source": [
     "#### Logistic"
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "light-dress",
+   "id": "polyphonic-miami",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-29T19:50:01.570897Z",
@@ -1002,15 +1002,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breathing-vacation",
+   "id": "joined-bulgaria",
    "metadata": {},
    "source": [
-    "The best and more even model so far, the model I'll focus on going forward"
+    "The best and more even model so far. I think with the help of the binary classification logistic regression does best with larger datasets as they often end up being very sparse. This is the model I'll focus on going forward"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pediatric-chile",
+   "id": "sufficient-movement",
    "metadata": {},
    "source": [
     "#### SVC"
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "dependent-battery",
+   "id": "brave-fundamental",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-30T03:17:21.393615Z",
@@ -1071,16 +1071,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "leading-binding",
+   "id": "julian-wonder",
    "metadata": {},
    "source": [
-    "The worst model, expremely high recall, most likely due to classifying everything as one class"
+    "The worst model, expremely high recall, most likely due to classifying everything as one class. I think this happened because the dataset was so large and the model failed to converge and thus classified everything as a single class."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "yellow-platform",
+   "id": "minute-venice",
    "metadata": {},
    "outputs": [],
    "source": []
